packages/sycamore-macro/tests/view/component-fail.stderr
error: unexpected end of input, expected parentheses
  --> $DIR/component-fail.rs:13:22
   |
13 |     let _: View<G> = view! { C };
   |                      ^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared type `UnknownComponent`
  --> $DIR/component-fail.rs:11:30
   |
11 |     let _: View<G> = view! { UnknownComponent() };
   |                              ^^^^^^^^^^^^^^^^ use of undeclared type `UnknownComponent`

error[E0308]: mismatched types
  --> $DIR/component-fail.rs:14:32
   |
14 |     let _: View<G> = view! { C(1) };
   |                                ^ expected `()`, found integer
